# PAL

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md
TEST/: CMakeLists.txt  README.md  TEST_CONVEXHULL.c  TEST_CONVEXHULL.h  TEST_MAX_SAT.cpp  TEST_MAX_SAT.h  TEST_POLYGON.c  TEST_POLYGON.h  TEST_UTILS.c  TEST_UTILS.cpp  TEST_UTILS.h  TEST_UTILS.hpp  TEST_knapsack.cpp  TEST_knapsack.h  TEST_metricTSP.c  TEST_metricTSP.cpp  TEST_metricTSP.h  TEST_setcover.cpp  TEST_setcover.h  main.c  main.cpp
src/AAL/: AAL_MAX_SAT.cpp  AAL_MAX_SAT.h  AAL_UTILS.c  AAL_UTILS.cpp  AAL_UTILS.h  AAL_knapsack.cpp  AAL_knapsack.h  AAL_metricTSP.cpp  AAL_metricTSP.h  AAL_setcover.cpp  AAL_setcover.h  CMakeLists.txt  README.md  setcover.cpp  setcover.h
src/CGL/: CGL_CONVEXHULL.c  CGL_CONVEXHULL.h  CGL_POLYGON.c  CGL_POLYGON.h  CGL_UTILS.c  CGL_UTILS.cpp  CGL_UTILS.h  CMakeLists.txt  README.md
src/VLL/: CMakeLists.txt  README.md  VLL_CONTAINER.c  VLL_CONTAINER.h  VLL_SCREEN.c  VLL_SCREEN.h  VLL_UTILS.c  VLL_UTILS.cpp  VLL_UTILS.h
testsuite/: CMakeLists.txt  TEST_setcover.cpp  TEST_setcover.h  main.c  testsuite_UTILS.cpp  testsuite_UTILS.h
